--- a/package.json
+++ b/package.json
@@ -14,11 +14,14 @@
     "nodemon": "^2.0.3"
   },
   "dependencies": {
+    "axios": "^0.19.2",
     "bcrypt": "^4.0.1",
     "celebrate": "^12.1.0",
     "cors": "^2.8.5",
+    "ejs": "^3.0.2",
     "express": "^4.17.1",
     "knex": "^0.20.15",
+    "multer": "^1.4.2",
     "mysql": "^2.18.1"
   }
 }
