--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
   "devDependencies": {
     "nodemon": "^2.0.3",
     "jest": "^25.2.3",
-    "supertest": "^4.0.2"
+    "supertest": "^4.0.2",
+    "cross-env": "^7.0.2"
   },
   "dependencies": {
     "axios": "^0.19.2",
