--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "bcrypt": "^4.0.1",
     "celebrate": "^12.1.0",
     "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
     "ejs": "^3.0.2",
     "express": "^4.17.1",
     "knex": "^0.20.15",
